# message-shield-mas

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: attacks.yaml  model_config.yaml  runtime_policy.yaml  tasks.yaml
data/reports/: experiment_report.csv  summary_table.csv
data/tasks/: attacked_tasks.jsonl  benign_tasks.jsonl
src/: config.py  logging_utils.py  main.py  run_batch.py  schema.py
src/agents/: __init__.py  base_agent.py  executor.py  executor_agent.py  planner.py  planner_agent.py  reviewer.py  reviewer_agent.py
src/attacks/: __init__.py  attack_base.py  attack_registry.py  authority_attack.py  distributed_backdoor_attack.py  payload_split_attack.py  rewrite_attack.py  transitive_trust_attack.py
src/eval/: __init__.py  metrics.py  run_batch.py  summarize_results.py  trace_parser.py
src/runtime/: __init__.py  monitor.py  placement.py  policy_engine.py  provenance.py  rules.py  trust_ledger.py
src/topologies/: __init__.py  chain.py  mesh.py  star.py
src/workflows/: __init__.py  base_workflow.py  linear_workflow.py
tests/: test_attacks.py  test_placement.py  test_policy.py  test_policy_engine.py  test_provenance.py  test_rules.py  test_schema.py  test_trust_ledger.py  test_workflow.py
